Added nicer colours in tmux and saner mouse support.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,23 @@
+set -g default-terminal xterm
+
 set-option -g prefix C-a
 set-option -g mode-keys vi
-set-option status-bg blue
-set-option status-fg white
 
+# Nicer colors for the status line.
+set-option -g status-bg blue
+set-option -g status-fg white
+
+# Give the active pane a nice red color, the others are blue.
+set-option -g pane-active-border-fg red
+set-option -g pane-border-fg blue
+
+# Sane us of the mouse.
+set-window-option -g mode-mouse on
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-option -g mouse-resize-pane on
+
+# Vi key bindings to switch windows.
 bind-key l select-pane -R
 bind-key h select-pane -L
 bind-key k select-pane -U
