added a binding to grab the full scroll buffer in a file from tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,3 +22,5 @@ bind-key l select-pane -R
 bind-key h select-pane -L
 bind-key k select-pane -U
 bind-key j select-pane -D
+
+bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
