--- a/tmux.conf
+++ b/tmux.conf
@@ -23,4 +23,7 @@ bind-key h select-pane -L
 bind-key k select-pane -U
 bind-key j select-pane -D
 
+# Use a bigger scrollback buffer.
+set-option -g history-limit 5000
+
 bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
