Newer versions of tmux do mouse configuration different.

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,11 +11,7 @@ set-option -g status-fg white
 set-option -g pane-active-border-fg red
 set-option -g pane-border-fg blue
 
-# Sane us of the mouse.
-set-window-option -g mode-mouse on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-option -g mouse-resize-pane on
+set-window-option -g mouse on
 
 # Vi key bindings to switch windows.
 bind-key l select-pane -R
