--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,10 @@ set-option -g status-fg white
 set-option -g pane-active-border-fg red
 set-option -g pane-border-fg blue
 
-set-window-option -g mouse on
+# Don't rename windows automatically.
+set-option -g allow-rename off
+
+#set-window-option -g mouse on
 
 # Vi key bindings to switch windows.
 bind-key l select-pane -R
@@ -20,6 +23,6 @@ bind-key k select-pane -U
 bind-key j select-pane -D
 
 # Use a bigger scrollback buffer.
-set-option -g history-limit 5000
+set-option -g history-limit 10000 
 
 bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
