Add renumber-windows option in tmux config
When a window is deleted, all the other windows are automatically
renumbered.

https://stackoverflow.com/questions/8469612/how-do-i-make-tmux-reorder-windows-when-one-is-deleted

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,7 @@ set-option -g pane-border-fg blue
 
 # Don't rename windows automatically.
 set-option -g allow-rename off
+set-option -g renumber-windows on
 
 #set-window-option -g mouse on
 
