--- a/tmux.conf
+++ b/tmux.conf
@@ -4,12 +4,12 @@ set-option -g prefix C-a
 set-option -g mode-keys vi
 
 # Nicer colors for the status line.
-set-option -g status-bg blue
+set-option -g status-bg colour18
 set-option -g status-fg white
 
 # Give the active pane a nice red color, the others are blue.
-set-option -g pane-active-border-fg red
-set-option -g pane-border-fg blue
+set-option -g pane-active-border-style fg=red
+set-option -g pane-border-style fg=blue
 
 # Don't rename windows automatically.
 set-option -g allow-rename off
